@@ -6,6 +6,8 @@ git-annex (5.20140228) UNRELEASED; urgency=medium
     git directory anymore. (Or are bare)
   * webapp: Refuse to start in a bare git repository.
   * assistant --autostart: Refuse to start in a bare git repository.
+  * webapp: Don't list the public repository group when editing a
+    git repository; it only makes sense for special remotes.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 28 Feb 2014 14:52:15 -0400
 
